--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1,38 +1,97 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "2021b0b8",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-08-13T14:38:36.368726Z",
-     "start_time": "2021-08-13T14:38:36.350729Z"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "# Import libs\n",
-    "import os\n",
-    "\n",
-    "import utils\n"
-   ]
+    "# Project Notebook <br/> <strong>Entsoe Transparency Platform Client</strong>\r\n",
+    "\r\n",
+    "This project notebook contains all notes on this projects developments."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Definition\r\n",
+    "This section contains explanations for this projects scope."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Lifecycle"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Scope"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96ed3d8b",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Process"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Get api statics"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Script"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "# Import libs\r\n",
+    "from entsoetransparency.src.get_api_statics import get_api_statics\r\n",
+    "\r\n",
+    "a, b = get_api_statics()\r\n",
+    "\r\n",
+    "print(b)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'Available parameters': {'DocumentType': 'Get, Post', 'DocStatus': 'Get, Post', 'ProcessType': 'Get, Post', 'BusinessType': 'Get, Post', 'PsrType': 'Get, Post', 'Type_MarketAgreement.Type (Contract Type in Balancing)': 'Get, Post', 'Contract_MarketAgreement.Type': 'Get, Post', 'Auction.Type': 'Get, Post', 'Auction.Category': 'Get, Post', 'ClassificationSequence_AttributeInstanceComponent.Position': 'Get, Post', 'OutBiddingZone_Domain': 'Get, Post', 'BiddingZone_Domain': 'Get, Post', 'ControlArea_Domain': 'Get, Post', 'In_Domain': 'Get, Post', 'Out_Domain': 'Get, Post', 'Acquiring_Domain': 'Get, Post', 'Connecting_Domain': 'Get, Post', 'RegisteredResource': 'Get, Post', 'TimeInterval (can not be combined with PeriodStart, PeriodEnd)': 'Get, Post', 'PeriodStart (can not be combined with TimeInterval)': 'Get', 'PeriodEnd (can not be combined with TimeInterval)': 'Get', 'TimeIntervalUpdate (can not be combined with PeriodStartUpdate, PeriodEndUpdate)': 'Get, Post', 'PeriodStartUpdate (can not be combined with TimeIntervalUpdate)': 'Get', 'PeriodEndUpdate (can not be combined with TimeIntervalUpdate)': 'Get', 'Update_DateAndOrTime (datetime in numeric. For example 20210803113900000 for evolution update date time 03.08.2021 13:39:00.000)': 'Get, Post'}, 'Contract_MarketAgreement.Type': {'A01': 'Daily', 'A02': 'Weekly', 'A03': 'Monthly', 'A04': 'Yearly', 'A05': 'Total', 'A06': 'Long term', 'A07': 'Intraday', 'A13': 'Hourly (Type_MarketAgreement.Type only)'}, 'Type_MarketAgreement.Type': {'A01': 'Daily', 'A02': 'Weekly', 'A03': 'Monthly', 'A04': 'Yearly', 'A05': 'Total', 'A06': 'Long term', 'A07': 'Intraday', 'A13': 'Hourly (Type_MarketAgreement.Type only)'}, 'Auction.Type': {'A01': 'Implicit', 'A02': 'Explicit'}, 'Auction.Category': {'A01': 'Base', 'A02': 'Peak', 'A03': 'Off Peak', 'A04': 'Hourly'}, 'PsrType': {'A03': 'Mixed', 'A04': 'Generation', 'A05': 'Load', 'B01': 'Biomass', 'B02': 'Fossil Brown coal/Lignite', 'B03': 'Fossil Coal-derived gas', 'B04': 'Fossil Gas', 'B05': 'Fossil Hard coal', 'B06': 'Fossil Oil', 'B07': 'Fossil Oil shale', 'B08': 'Fossil Peat', 'B09': 'Geothermal', 'B10': 'Hydro Pumped Storage', 'B11': 'Hydro Run-of-river and poundage', 'B12': 'Hydro Water Reservoir', 'B13': 'Marine', 'B14': 'Nuclear', 'B15': 'Other renewable', 'B16': 'Solar', 'B17': 'Waste', 'B18': 'Wind Offshore', 'B19': 'Wind Onshore', 'B20': 'Other', 'B21': 'AC Link', 'B22': 'DC Link', 'B23': 'Substation', 'B24': 'Transformer'}, 'BusinessType': {'A25': 'General Capacity Information', 'A29': 'Already allocated capacity (AAC)', 'A43': 'Requested capacity (without price)', 'A46': 'System Operator redispatching', 'A53': 'Planned maintenance', 'A54': 'Unplanned outage', 'A85': 'Internal redispatch', 'A95': 'Frequency containment reserve', 'A96': 'Automatic frequency restoration reserve', 'A97': 'Manual frequency restoration reserve', 'A98': 'Replacement reserve', 'B01': 'Interconnector network evolution', 'B02': 'Interconnector network dismantling', 'B03': 'Counter trade', 'B04': 'Congestion costs', 'B05': 'Capacity allocated (including price)', 'B07': 'Auction revenue', 'B08': 'Total nominated capacity', 'B09': 'Net position', 'B10': 'Congestion income', 'B11': 'Production unit', 'B33': 'Area Control Error', 'B95': 'Procured capacity', 'C22': 'Shared Balancing Reserve Capacity', 'C23': 'Share of reserve capacity', 'C24': 'Actual reserve capacity'}, 'ProcessType': {'A01': 'Day ahead', 'A02': 'Intra day incremental', 'A16': 'Realised', 'A18': 'Intraday total', 'A31': 'Week ahead', 'A32': 'Month ahead', 'A33': 'Year ahead', 'A39': 'Synchronisation process', 'A40': 'Intraday process', 'A46': 'Replacement reserve', 'A47': 'Manual frequency restoration reserve', 'A51': 'Automatic frequency restoration reserve', 'A52': 'Frequency containment reserve', 'A56': 'Frequency restoration reserve'}, 'DocStatus': {'A01': 'Intermediate', 'A02': 'Final', 'A05': 'Active', 'A09': 'Cancelled', 'A13': 'Withdrawn', 'X01': 'Estimated'}, 'DocumentType': {'A09': 'Finalised schedule', 'A11': 'Aggregated energy data report', 'A15': 'Acquiring system operator reserve schedule', 'A24': 'Bid document', 'A25': 'Allocation result document', 'A26': 'Capacity document', 'A31': 'Agreed capacity', 'A38': 'Reserve allocation result document', 'A44': 'Price Document', 'A61': 'Estimated Net Transfer Capacity', 'A63': 'Redispatch notice', 'A65': 'System total load', 'A68': 'Installed generation per type', 'A69': 'Wind and solar forecast', 'A70': 'Load forecast margin', 'A71': 'Generation forecast', 'A72': 'Reservoir filling information', 'A73': 'Actual generation', 'A74': 'Wind and solar generation', 'A75': 'Actual generation per type', 'A76': 'Load unavailability', 'A77': 'Production unavailability', 'A78': 'Transmission unavailability', 'A79': 'Offshore grid infrastructure unavailability', 'A80': 'Generation unavailability', 'A81': 'Contracted reserves', 'A82': 'Accepted offers', 'A83': 'Activated balancing quantities', 'A84': 'Activated balancing prices', 'A85': 'Imbalance prices', 'A86': 'Imbalance volume', 'A87': 'Financial situation', 'A88': 'Cross border balancing', 'A89': 'Contracted reserve prices', 'A90': 'Interconnection network expansion', 'A91': 'Counter trade notice', 'A92': 'Congestion costs', 'A93': 'DC link capacity', 'A94': 'Non EU allocations', 'A95': 'Configuration document', 'B11': 'Flow-based allocations'}, 'Areas': {'10YDE-VE-------2': '50Hertz CA, DE(50HzT) BZA', '10YAL-KESH-----5': 'Albania, OST BZ / CA / MBA', '10YDE-RWENET---I': 'Amprion CA', '10YAT-APG------L': 'Austria, APG CA / MBA', 'BY': 'Belarus', '10Y1001A1001A51S': 'Belarus BZ / CA / MBA', '10YBE----------2': 'Belgium, Elia BZ / CA / MBA', '10YBA-JPCC-----D': 'Bosnia Herzegovina, NOS BiH BZ / CA / MBA', '10YCA-BULGARIA-R': 'Bulgaria, ESO BZ / CA / MBA', '10YDOM-CZ-DE-SKK': 'BZ CZ+DE+SK BZ / BZA', '10YHR-HEP------M': 'Croatia, HOPS BZ / CA / MBA', '10YDOM-REGION-1V': 'CWE Region', '10YCY-1001A0003J': 'Cyprus, Cyprus TSO BZ / CA / MBA', '10YCZ-CEPS-----N': 'Czech Republic, CEPS BZ / CA/ MBA', '10Y1001A1001A63L': 'DE-AT-LU BZ', '10Y1001A1001A82H': 'DE-LU MBA', '10Y1001A1001A65H': 'Denmark', '10YDK-1--------W': 'DK1 BZ / MBA', '10YDK-2--------M': 'DK2 BZ / MBA', '10Y1001A1001A796': 'Denmark, Energinet CA', '10Y1001A1001A39I': 'Estonia, Elering BZ / CA / MBA', '10YFI-1--------U': 'Finland, Fingrid BZ / CA / MBA', '10YMK-MEPSO----8': 'Former Yugoslav Republic of Macedonia, MEPSO BZ / CA / MBA', '10YFR-RTE------C': 'France, RTE BZ / CA / MBA', '11Y0-0000-0265-K': 'GB(ElecLink) BZN', '10Y1001C--00098F': 'GB(IFA) BZN', '17Y0000009369493': 'GB(IFA2) BZ', '10Y1001A1001A83F': 'Germany', '10YGR-HTSO-----Y': 'Greece, IPTO BZ / CA/ MBA', '10YHU-MAVIR----U': 'Hungary, MAVIR CA / BZ / MBA', 'IS': 'Iceland', '10Y1001A1001A59C': 'Ireland (SEM) BZ / MBA', '10YIE-1001A00010': 'Ireland, EirGrid CA', '10YIT-GRTN-----B': 'Italy, IT CA / MBA', '10Y1001A1001A885': 'Italy_Saco_AC', '10Y1001A1001A893': 'Italy_Saco_DC', '10Y1001A1001A699': 'IT-Brindisi BZ', '10Y1001C--00096J': 'IT-Calabria BZ', '10Y1001A1001A70O': 'IT-Centre-North BZ', '10Y1001A1001A71M': 'IT-Centre-South BZ', '10Y1001A1001A72K': 'IT-Foggia BZ', '10Y1001A1001A66F': 'IT-GR BZ', '10Y1001A1001A84D': 'IT-MACROZONE NORTH MBA', '10Y1001A1001A85B': 'IT-MACROZONE SOUTH MBA', '10Y1001A1001A877': 'IT-Malta BZ', '10Y1001A1001A73I': 'IT-North BZ', '10Y1001A1001A80L': 'IT-North-AT BZ', '10Y1001A1001A68B': 'IT-North-CH BZ', '10Y1001A1001A81J': 'IT-North-FR BZ', '10Y1001A1001A67D': 'IT-North-SI BZ', '10Y1001A1001A76C': 'IT-Priolo BZ', '10Y1001A1001A77A': 'IT-Rossano BZ', '10Y1001A1001A74G': 'IT-Sardinia BZ', '10Y1001A1001A75E': 'IT-Sicily BZ', '10Y1001A1001A788': 'IT-South BZ', '10Y1001A1001A50U': 'Kaliningrad BZ / CA / MBA', '10YLV-1001A00074': 'Latvia, AST BZ / CA / MBA', '10YLT-1001A0008Q': 'Lithuania, Litgrid BZ / CA / MBA', '10YLU-CEGEDEL-NQ': 'Luxembourg, CREOS CA', '10Y1001A1001A93C': 'Malta, Malta BZ / CA / MBA', '10YCS-CG-TSO---S': 'Montenegro, CGES BZ / CA / MBA', '10YGB----------A': 'National Grid BZ / CA/ MBA', 'United Kingdom': '10Y1001A1001A92E', '10YNL----------L': 'Netherlands, TenneT NL BZ / CA/ MBA', '10YNO-1--------2': 'NO1 BZ / MBA', '10YNO-2--------T': 'NO2 BZ / MBA', '10YNO-3--------J': 'NO3 BZ / MBA', '10YNO-4--------9': 'NO4 BZ / MBA', '10Y1001A1001A48H': 'NO5 BZ / MBA', '10YNO-0--------C': 'Norway, Norway MBA, Stattnet CA', '10YDOM-1001A082L': 'PL-CZ BZA / CA', '10YPL-AREA-----S': 'Poland, PSE SA BZ / BZA / CA / MBA', '10YPT-REN------W': 'Portugal, REN BZ / CA / MBA', '10Y1001A1001A990': 'Republic of Moldova, Moldelectica BZ/CA/MBA', '10YRO-TEL------P': 'Romania, Transelectrica BZ / CA/ MBA', '10Y1001A1001A49F': 'Russia BZ / CA / MBA', 'RU': 'Russian Federation', '10Y1001A1001A44P': 'SE1 BZ / MBA', '10Y1001A1001A45N': 'SE2 BZ / MBA', '10Y1001A1001A46L': 'SE3 BZ / MBA', '10Y1001A1001A47J': 'SE4 BZ / MBA', '10YCS-SERBIATSOV': 'Serbia, EMS BZ / CA / MBA', '10YSK-SEPS-----K': 'Slovakia, SEPS BZ / CA / MBA', '10YSI-ELES-----O': 'Slovenia, ELES BZ / CA / MBA', '10Y1001A1001A016': 'Northern Ireland, SONI CA', '10YES-REE------0': 'Spain, REE BZ / CA / MBA', '10YSE-1--------K': 'Sweden, Sweden MBA, SvK CA', '10YCH-SWISSGRIDZ': 'Switzerland, Swissgrid BZ / CA / MBA', '10YDE-EON------1': 'TenneT GER CA', '10YDE-ENBW-----N': 'TransnetBW CA', 'TR': 'Turkey', '10YTR-TEIAS----W': 'Turkey BZ / CA / MBA', '10Y1001C--00003F': 'Ukraine, Ukraine BZ, MBA', '10Y1001A1001A869': 'Ukraine-DobTPP CTA', '10YUA-WEPS-----0': 'Ukraine BEI CTA', '10Y1001C--000182': 'Ukraine IPS CTA', '10Y1001C--00100H': 'Kosovo/ XK CA / XK BZN'}}\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.6 64-bit ('py39': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -87,6 +146,9 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "interpreter": {
+   "hash": "6e18c81bc6abd40fcdce672bdb233caf474e235f13cac905147e615e8e5026f5"
   }
  },
  "nbformat": 4,
