--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -17,7 +17,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Definition\r\n",
+    "## Definitions\r\n",
     "This section contains explanations for this projects scope."
    ],
    "metadata": {}
@@ -37,10 +37,10 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "cell_type": "markdown",
+   "source": [
+    "![Alt text here](images/diagrams/diagrams.png)"
+   ],
    "metadata": {}
   },
   {
